# mcp-notes

./: .gitignore  CLAUDE.md  README.md  deno.json  main.py  obsidian-notes-mcp-readme.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
docs/: API.md  CLAUDE_DESKTOP.md  SETUP.md
src/: main.ts
src/config/: settings.ts
src/lib/: file_manager.ts  git.ts  markdown.ts  search.ts  types.ts
src/mcp_notes/: __init__.py  main.py
src/mcp_notes/config/: __init__.py  settings.py
src/mcp_notes/lib/: __init__.py  file_manager.py  git.py  markdown.py  search.py  types.py
src/mcp_notes/tools/: __init__.py
tests/: __init__.py  conftest.py  test_date_parser.py  test_file_manager.py  test_markdown.py  test_mcp_server.py
