[project]
name = "mcp-notes"
version = "0.1.0"
description = "MCP server for managing Obsidian notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
    "mcp>=1.9.4",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
]
